--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 </ol>
                 <div class="work-links">
                   <!-- Add url of project in href attribute -->
-                  <a href="https://linktr.ee/netalex" target="_blank" rel="noopener" class="link"
+                  <a href="https://alejandronetaleex.github.io/Inicio/" target="_blank" rel="noopener" class="link"
                     >Explorar este proyecto</a
                   >
 
