--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
           <!-- Add a small introductory paragraph about yourself -->
           <p class="header-text">
-            Hola, soy practicante de ingeniería en sistemas y emprendedor tecnológico. 
+            Hola, soy recien egresado de ingeniería en sistemas en proceso de titulacion, y emprendedor tecnológico. 
             Tengo experiencia en redes, desarrollo backend y frontend, diseñando soluciones accesibles y eficientes. 
             Busco constantemente innovar y crecer en el ámbito tecnológico.
           </p>
@@ -180,12 +180,7 @@
                 alt="java"
                 class="logo hide to-bottom"
               />
-              <img
-                loading="lazy"
-                src="assets/images/trusted-by/php.png"
-                alt="php"
-                class="logo hide to-bottom"
-              />
+              
             </div>
 
 
@@ -202,11 +197,6 @@
                 src="assets/images/trusted-by/sql.png"
                 alt="sql"
                 class="logo"
-              /><img
-                loading="lazy"
-                src="assets/images/trusted-by/postgresql.png"
-                alt="postgresql"
-                class="logo hide to-bottom"
               />
             </div>
 
@@ -500,10 +490,8 @@
           <h2 class="h2" id="skills">Mi kit de herramientas</h2>
           <div class="skills-imgs">
                 <img src="assets/images/skills/sql.png" alt="sql" class="skills-img" loading="lazy" title="React">
-                <img src="assets/images/skills/postgresql.png" alt="postgresql" class="skills-img" loading="lazy" title="Svelte">
                  <img src="assets/images/skills/java.png" alt="java" class="skills-img" loading="lazy" title="Typescript">
                  <img src="assets/images/skills/python.png" alt="pyhton" class="skills-img" loading="lazy" title="Web Accessibility">
-                 <img src="assets/images/skills/php.png" alt="php" class="skills-img" loading="lazy" title="Shell">
                  <img src="assets/images/skills/css.png" alt="css" class="skills-img" loading="lazy" title="NextJS">
                  <img src="assets/images/skills/arduino.png" alt="arduino" class="skills-img" loading="lazy" title="Graph QL">
                  <img src="assets/images/skills/linux.png" alt="linux" class="skills-img" loading="lazy" title="Git">
